# repo_demo

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: pre-push.sample
src/repo_demo/: some_file.py
tests/: test_some_file.py
